# rust-pwa

./: .eslintignore  .eslintrc.json  .gitignore  .prettierrc.json  .stylelintignore  .stylelintrc.json  Cargo.toml  LICENSE  README.md  application.yaml  babel.config.json  package.json  postcss.config.cjs  rustfmt.toml
app/: Cargo.toml  README.md  package.json  webpack.config.js
app/assets/: index.ejs
app/src/: lib.rs  main.js  prelude.rs  styles.scss  sw.js
app/src/service-worker/: gfonts.js  messages.js  precaching.js
app/src/styles/: _mdc.scss  _normalize.scss
app/src/themes/: dark.scss  light.scss
app/webpack/: HtmlTemplateParameters.mjs  build-wasm.mjs  child-process.mjs  paths.mjs
core/: Cargo.toml  README.md
core/src/: lib.rs  prelude.rs
core/src/tracing/: mod.rs  prelude.rs
server/: Cargo.toml  application.yaml  settings.json
server/src/: config.rs  main.rs  prelude.rs  typed_header.rs
server/src/application/: commands.rs  mod.rs
server/src/database/: mod.rs  query.rs
server/src/handlers/: file_server.rs  mod.rs
