[package]
edition = "2021"
name    = "rust-pwa-app"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys               = "0.3.56"
wasm-bindgen-futures = "0.4.29"
console_error_panic_hook = "0.1.7"
wee_alloc = "0.4.5"

[dependencies.rust-pwa-core]
path = '../core'

[dependencies.wasm-bindgen]
features = ["default", "serde-serialize"]
version  = "0.2"

[dependencies.web-sys]
features = [
  'console',
  'CssStyleDeclaration',
  'Document',
  'DomStringMap',
  'DomTokenList',
  'Element',
  'Event',
  'EventTarget',
  'HtmlBodyElement',
  'HtmlElement',
  'HtmlInputElement',
  'KeyboardEvent',
  'Location',
  'Node',
  'NodeList',
  'Storage',
  'Window',
]
version = "0.3.56"
