[package]
edition = "2021"
name    = "rust-pwa-core"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre  = "0.6.0"
derive_more = "0.99"
dotenv      = "0.15"
futures     = "0.3"
once_cell   = "1.8"
serde_json  = "1"
thiserror   = "1"
regex = "1.5.4"

[dependencies.serde]
features = ["derive"]
version  = "1"

[dependencies.time]
features = ["serde-human-readable"]
version  = "0.3"

[dependencies.uuid]
features = ["v4", "serde", "js"]
version  = "1.0.0-alpha.1"
