[package]
edition = "2021"
name    = "rust-pwa-server"
version = "0.1.0"


[dependencies]
tracing          = "0.1.30"
tracing-appender = "0.2.0"
tracing-futures  = "0.2.5"
tracing-log      = "0.1.2"

[dependencies.clap]
features = [
  "default",
  "env",
  "regex",
  "derive",
  "unicode",
  "wrap_help",
  "cargo",
]
version = "3"

[dependencies.figment]
features = ["yaml", "env"]
version  = "0.10.6"

[dependencies.rocket]
features = ["uuid", "secrets", "tls", "json"]
version  = "0.5.0-rc.1"

[dependencies.rust-pwa-core]
path = '../core'

[dependencies.serde]
features = ["derive"]
version  = "1"

[dependencies.sqlx]
features = ["runtime-tokio-rustls", "postgres", "sqlite", "time", "uuid"]
version  = "0.5"


[dependencies.tracing-subscriber]
features = ["default", "env-filter", "json", "time"]
version  = "0.3.8"

[dependencies.tokio]
features = ["full"]
version  = "1.16.1"
